--- a/python-docker/Dockerfile
+++ b/python-docker/Dockerfile
@@ -12,11 +12,8 @@ RUN pip3 install -r requirements.txt
 
 COPY . .
 
-EXPOSE 5000
+EXPOSE ${PORT}
 
 CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0"]
-
-
-
 
 
